--- a/flex-projeto/index.html
+++ b/flex-projeto/index.html
@@ -115,8 +115,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+        <div class="flex-container footer">
+            <p>&copy; 2022 CSS Flexbox</p>
+            <p>Desenvolvido por: Lucas Miranda</p>
+        </div>
     </footer>
 </body>
 </html>
